--- a/addToCart.html
+++ b/addToCart.html
@@ -44,7 +44,7 @@
       </section>
        <div class="container">
         <div class="navbar-brand">
-          <a href="./index.html">
+          <a href="/index.html">
             <img
               src="./images/code with BitWizards.png.png"
               alt="Ecommerce Website"
@@ -59,34 +59,34 @@
 
         <!-- NAV BAR STARTS FROM HERE  -->
         <nav class="navbar">
-          <ul>
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link">Home</a>
-            </li>
+  <ul>
+    <li class="nav-item">
+      <a href="/index.html" class="nav-link">Home</a>
+    </li>
 
-            <li class="nav-item">
-              <a href="./about.html" class="nav-link">About</a>
-            </li>
+    <li class="nav-item">
+      <a href="/about.html" class="nav-link">About</a>
+    </li>
 
-            <li class="nav-item">
-              <a href="./product.html" class="nav-link">Products</a>
-            </li>
+    <li class="nav-item">
+      <a href="/product.html" class="nav-link">Products</a>
+    </li>
 
-            <li class="nav-item">
-              <a href="./contact.html" class="nav-link">Contact</a>
-            </li>
+    <li class="nav-item">
+      <a href="/contact.html" class="nav-link">Contact</a>
+    </li>
 
-            <li class="nav-item">
-              <a
-                href="./addToCart.html"
-                class="nav-link add-to-cart-button"
-                id="cartValue"
-              >
-                <i class="fa-solid fa-cart-shopping">0</i>
-              </a>
-            </li>
-          </ul>
-        </nav>
+    <li class="nav-item">
+      <a
+        href="/addToCart.html"
+        class="nav-link add-to-cart-button"
+        id="cartValue"
+      >
+        <i class="fa-solid fa-cart-shopping">0</i>
+      </a>
+    </li>
+  </ul>
+</nav>
       </div>
     </header>
     <!-- ========== End Navbar ========== -->
