--- a/contact.html
+++ b/contact.html
@@ -1,220 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Code With BitWizards - Ecommerce Store</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 
-    <link rel="icon" href="/android-chrome-512x512.png" type="image/x-icon">
-  </head>
-  <body>
-    <!-- ========== Start Navbar ========== -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Code With BitWizards - Ecommerce Store</title>
 
-    <header class="section-navbar">
-      <section class="top_txt">
-        <div class="head container">
-          <div class="head_txt">
-            <p>Free shipping, 30-day return or refund guarantee.</p>
-          </div>
-          <div class="sing_in_up">
-            <a href="# ">SIGN IN</a>
-            <a href="# ">SIGN UP</a>
-          </div>
+  <link rel="icon" href="/android-chrome-512x512.png" type="image/x-icon">
+</head>
+
+<body>
+  <!-- ========== Start Navbar ========== -->
+
+  <header class="section-navbar">
+    <section class="top_txt">
+      <div class="head container">
+        <div class="head_txt">
+          <p>Free shipping, 30-day return or refund guarantee.</p>
         </div>
-      </section>
-      <!--? ## Step 1: Don't Forget To LIKE SHARE & SUBSCRIBE TO THAPA TECHNCIAL YOUTUBE CHANNEL 👉 https://www.youtube.com/thapatechnical -->
-       <div class="container">
-        <div class="navbar-brand">
-          <a href="./index.html">
-            <img
-              src="./images/code with BitWizards.png.png"
-              alt="Ecommerce Website"
-              class="logo"
-              width="80%"
-              height="auto"
-            />
-          </a>
-        </div>
-
-        <!-- NAVBAR ENDS HERE  -->
-
-        <!-- NAV BAR STARTS FROM HERE  -->
-        <nav class="navbar">
-          <ul>
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link">Home</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="./about.html" class="nav-link">About</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="./product.html" class="nav-link">Products</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="./contact.html" class="nav-link">Contact</a>
-            </li>
-
-            <li class="nav-item">
-              <a
-                href="./addToCart.html"
-                class="nav-link add-to-cart-button"
-                id="cartValue"
-              >
-                <i class="fa-solid fa-cart-shopping">0</i>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <!-- ========== End Navbar ========== -->
-    <!-- ========== Start About Section ========== -->
-    <section class="section-contact">
-      <div class="container">
-        <h2 class="section-common--heading">Contact With Code With BitWizards</h2>
-        <p class="section-common--subheading">
-          Get in touch with us. We are always here to help you.
-        </p>
-      </div>
-
-      <div class="container grid grid-two--cols">
-        <div class="contact-content">
-          <form action="#">
-            <div class="grid grid-two-cols mb-3">
-              <div>
-                <label for="username">full name</label>
-                <input
-                  type="text"
-                  name="username"
-                  id="username"
-                  required
-                  autocomplete="off"
-                  placeholder="enter full name"
-                />
-              </div>
-
-              <div>
-                <label for="email">email address</label>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  required
-                  autocomplete="off"
-                  placeholder="abc@thapa.com"
-                />
-              </div>
-            </div>
-
-            <div class="mb-3">
-              <label for="subject">subject</label>
-              <input
-                type="text"
-                name="subject"
-                id="subject"
-                required
-                autocomplete="off"
-                placeholder="title of your message"
-              />
-            </div>
-
-            <div class="mb-3">
-              <label for="message">message</label>
-              <textarea
-                name="message"
-                id="message "
-                cols="30"
-                rows="10"
-                placeholder="we are always here to help you."
-              ></textarea>
-            </div>
-
-            <div class="mt-3">
-              <button type="submit" class="btn contact-btn">
-                send message
-              </button>
-            </div>
-          </form>
-        </div>
-        <div class="contact-map">
-          <iframe
-            src= "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d615.6937423346825!2d72.9774832757588!3d33.70348397870385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfbd9d17afe789%3A0x39ea7b991fa6943b!2sSuavastu%20Green%20Guest%20House!5e0!3m2!1sen!2s!4v1726593590107!5m2!1sen!2s" 
-            width="100%"
-            height="auto"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+        <div class="sing_in_up">
+          <a href="# ">SIGN IN</a>
+          <a href="# ">SIGN UP</a>
         </div>
       </div>
     </section>
+    <!--? ## Step 1: Don't Forget To LIKE SHARE & SUBSCRIBE TO THAPA TECHNCIAL YOUTUBE CHANNEL 👉 https://www.youtube.com/thapatechnical -->
+    <div class="container">
+      <div class="navbar-brand">
+        <a href="/index.html">
+          <img src="./images/code with BitWizards.png.png" alt="Ecommerce Website" class="logo" width="80%"
+            height="auto" />
+        </a>
+      </div>
 
-    <!--* ========== Start Footer Section ========== -->
+      <!-- NAVBAR ENDS HERE  -->
 
-    <footer class="section-footer">
-        <div class="footer-container container">
-          <div class="content_1">
-            <img src="./images/code with BitWizards.png.jpg" alt="logo" />
-            <p>
-              Welcome to Code With BitWizards Store, your ultimate destination for
-              cutting-edge gadgets!
-            </p>
-            <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards" />
-          </div>
-          <div class="content_2">
-            <h4>SHOPPING</h4>
-            <a href="#">Computer Store</a>
-            <a href="#">Laptop Store</a>
-            <a href="#">Accessories</a>
-            <a href="#">Sales & Discount</a>
-          </div>
-          <div class="content_3">
-            <h4>Experience</h4>
-            <a href="./contact.html">Contact Us</a>
-            <a href="" target="_blank">Payment Method</a>
-            <a href="" target="_blank">Delivery</a>
-            <a href="" target="_blank">Return and Exchange</a>
-          </div>
-          <div class="content_4">
-            <h4>NEWSLETTER</h4>
-            <p>Be the first to know about new<br />arrivals, sales & promos!</p>
-            <div class="f-mail">
-              <input type="email" placeholder="Your Email" />
-              <i class="bx bx-envelope"></i>
+      <!-- NAV BAR STARTS FROM HERE  -->
+      <nav class="navbar">
+        <ul>
+          <li class="nav-item">
+            <a href="/index.html" class="nav-link">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/about.html" class="nav-link">About</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/product.html" class="nav-link">Products</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/contact.html" class="nav-link">Contact</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/addToCart.html" class="nav-link add-to-cart-button" id="cartValue">
+              <i class="fa-solid fa-cart-shopping">0</i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- ========== End Navbar ========== -->
+  <!-- ========== Start About Section ========== -->
+  <section class="section-contact">
+    <div class="container">
+      <h2 class="section-common--heading">Contact With Code With BitWizards</h2>
+      <p class="section-common--subheading">
+        Get in touch with us. We are always here to help you.
+      </p>
+    </div>
+
+    <div class="container grid grid-two--cols">
+      <div class="contact-content">
+        <form action="#">
+          <div class="grid grid-two-cols mb-3">
+            <div>
+              <label for="username">full name</label>
+              <input type="text" name="username" id="username" required autocomplete="off"
+                placeholder="enter full name" />
             </div>
-            <hr />
+
+            <div>
+              <label for="email">email address</label>
+              <input type="email" name="email" id="email" required autocomplete="off" placeholder="abc@thapa.com" />
+            </div>
           </div>
-        </div>
-        <div class="f-design">
-          <div class="f-design-txt">
-            <p>Design and Code by Code With BitWizards  &nbsp;   <i class="fa-brands fa-youtube" style="color: #ff0000;"></i>   &nbsp;<i class="fab fa-tiktok"></i>  &nbsp; <i class="fa-brands fa-facebook" style="color: #43609c;"></i> </p>
+
+          <div class="mb-3">
+            <label for="subject">subject</label>
+            <input type="text" name="subject" id="subject" required autocomplete="off"
+              placeholder="title of your message" />
           </div>
+
+          <div class="mb-3">
+            <label for="message">message</label>
+            <textarea name="message" id="message " cols="30" rows="10"
+              placeholder="we are always here to help you."></textarea>
+          </div>
+
+          <div class="mt-3">
+            <button type="submit" class="btn contact-btn">
+              send message
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="contact-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d615.6937423346825!2d72.9774832757588!3d33.70348397870385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfbd9d17afe789%3A0x39ea7b991fa6943b!2sSuavastu%20Green%20Guest%20House!5e0!3m2!1sen!2s!4v1726593590107!5m2!1sen!2s"
+          width="100%" height="auto" style="border: 0" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </section>
+
+  <!--* ========== Start Footer Section ========== -->
+
+  <footer class="section-footer">
+    <div class="footer-container container">
+      <div class="content_1">
+        <img src="./images/code with BitWizards.png.jpg" alt="logo" />
+        <p>
+          Welcome to Code With BitWizards Store, your ultimate destination for
+          cutting-edge gadgets!
+        </p>
+        <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards" />
+      </div>
+      <div class="content_2">
+        <h4>SHOPPING</h4>
+        <a href="#">Computer Store</a>
+        <a href="#">Laptop Store</a>
+        <a href="#">Accessories</a>
+        <a href="#">Sales & Discount</a>
+      </div>
+      <div class="content_3">
+        <h4>Experience</h4>
+        <a href="./contact.html">Contact Us</a>
+        <a href="" target="_blank">Payment Method</a>
+        <a href="" target="_blank">Delivery</a>
+        <a href="" target="_blank">Return and Exchange</a>
+      </div>
+      <div class="content_4">
+        <h4>NEWSLETTER</h4>
+        <p>Be the first to know about new<br />arrivals, sales & promos!</p>
+        <div class="f-mail">
+          <input type="email" placeholder="Your Email" />
+          <i class="bx bx-envelope"></i>
         </div>
-      </footer>
+        <hr />
+      </div>
+    </div>
+    <div class="f-design">
+      <div class="f-design-txt">
+        <p>Design and Code by Code With BitWizards &nbsp; <i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+          &nbsp;<i class="fab fa-tiktok"></i> &nbsp; <i class="fa-brands fa-facebook" style="color: #43609c;"></i> </p>
+      </div>
+    </div>
+  </footer>
 
-    <!--* ========== End Footer Section ========== -->
+  <!--* ========== End Footer Section ========== -->
 
-    <!-- ========== End About Section ========== -->
+  <!-- ========== End About Section ========== -->
 
-    <script type="module" src="/main.js"></script>
+  <script type="module" src="/main.js"></script>
 
-    <!-- JS SCRIPT  -->
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <!-- JS SCRIPT  -->
+  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script> -->
-  </body>
+</body>
+
 </html>
