--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
     </section>
     <div class="container">
       <div class="navbar-brand">
-        <a href="./index.html">
+        <a href="/index.html">
           <img src="./images/code with BitWizards.png.png" alt="Ecommerce Website" class="logo" width="80%"
             height="auto" />
         </a>
@@ -42,23 +42,23 @@
       <nav class="navbar">
         <ul>
           <li class="nav-item">
-            <a href="./index.html" class="nav-link">Home</a>
+            <a href="/index.html" class="nav-link">Home</a>
           </li>
 
           <li class="nav-item">
-            <a href="./about.html" class="nav-link">About</a>
+            <a href="/about.html" class="nav-link">About</a>
           </li>
 
           <li class="nav-item">
-            <a href="./product.html" class="nav-link">Products</a>
+            <a href="/product.html" class="nav-link">Products</a>
           </li>
 
           <li class="nav-item">
-            <a href="./contact.html" class="nav-link">Contact</a>
+            <a href="/contact.html" class="nav-link">Contact</a>
           </li>
 
           <li class="nav-item">
-            <a href="./addToCart.html" class="nav-link add-to-cart-button" id="cartValue">
+            <a href="/addToCart.html" class="nav-link add-to-cart-button" id="cartValue">
               <i class="fa-solid fa-cart-shopping">0</i>
             </a>
           </li>
