--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               class="logo"
               width="80%"
               height="auto"
+               id="Homelogo"
             />
           </a>
         </div>
@@ -56,19 +57,20 @@
         <nav class="navbar">
   <ul>
     <li class="nav-item">
-      <a href="/index.html" class="nav-link">Home</a>
+      <a href="/index.html" class="nav-link"  id="Home" >Home</a>
+      
     </li>
 
     <li class="nav-item">
-      <a href="/about.html" class="nav-link">About</a>
+      <a href="/about.html" class="nav-link"  id="About">About</a>
     </li>
 
     <li class="nav-item">
-      <a href="/product.html" class="nav-link">Products</a>
+      <a href="/product.html" class="nav-link"  id="Products">Products</a>
     </li>
 
     <li class="nav-item">
-      <a href="/contact.html" class="nav-link">Contact</a>
+      <a href="/contact.html" class="nav-link"  id="Contact">Contact</a>
     </li>
 
     <li class="nav-item">
