--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- NAV BAR BRAND IS HERE  -->
       <div class="container">
         <div class="navbar-brand">
-          <a href="/index.html">
+          <a href="index.html">
             <img
               src="./images/code with BitWizards.png.png"
               alt="Ecommerce Website"
@@ -57,25 +57,25 @@
         <nav class="navbar">
   <ul>
     <li class="nav-item">
-      <a href="/index.html" class="nav-link"  id="Home" >Home</a>
+      <a href="index.html" class="nav-link"  id="Home" >Home</a>
       
     </li>
 
     <li class="nav-item">
-      <a href="/about.html" class="nav-link"  id="About">About</a>
+      <a href="about.html" class="nav-link"  id="About">About</a>
     </li>
 
     <li class="nav-item">
-      <a href="/product.html" class="nav-link"  id="Products">Products</a>
+      <a href="product.html" class="nav-link"  id="Products">Products</a>
     </li>
 
     <li class="nav-item">
-      <a href="/contact.html" class="nav-link"  id="Contact">Contact</a>
+      <a href="contact.html" class="nav-link"  id="Contact">Contact</a>
     </li>
 
     <li class="nav-item">
       <a
-        href="/addToCart.html"
+        href="addToCart.html"
         class="nav-link add-to-cart-button"
         id="cartValue"
       >
